--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
 
         <activity android:name=".SecondActivity" />
+        <activity android:name=".WebViewActivity" />
 
         <activity android:name=".LinkActivity">
 
