--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sdk.wisetracker.app">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -60,6 +62,26 @@
             <!--</intent-filter>-->
 
         </activity>
+
+        <!-- service test
+        <activity
+            android:name=".service.ServiceActivity"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <service android:name=".service.TestService" />
+
+        <receiver
+            android:name=".service.NewServiceBroadCastReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.NEW_SERVICE_CREATE" />
+            </intent-filter>
+        </receiver>
+        -->
 
     </application>
 
