--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,13 @@
             android:name=".MainActivity"
             android:launchMode="singleTop">
             <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
 
         <activity android:name=".SecondActivity" />
+        <activity android:name=".ThirdActivity" />
         <activity android:name=".WebViewActivity" />
 
         <activity android:name=".LinkActivity">
