sdk version update

--- a/bintray.version.properties
+++ b/bintray.version.properties
@@ -1,4 +1,5 @@
-#Mon Dec 23 15:09:32 KST 2019
-BASE_VERSION_PATCH=59
-DOX_VERSION_PATCH=59
-DOT_VERSION_PATCH=59
+#Thu Feb 27 15:11:01 KST 2020
+BASE_VERSION_PATCH=68
+NEW_DOT_VERSION_PATCH=68
+DOX_VERSION_PATCH=68
+DOT_VERSION_PATCH=60
