--- a/bintray.version.properties
+++ b/bintray.version.properties
@@ -1,5 +1,4 @@
-#Fri Jun 19 11:26:06 KST 2020
-BASE_VERSION_PATCH=102
-NEW_DOT_VERSION_PATCH=102
-DOX_VERSION_PATCH=102
-DOT_VERSION_PATCH=60
+#Thu Jul 16 18:16:06 KST 2020
+BASE_VERSION_PATCH=4
+NEW_DOT_VERSION_PATCH=4
+DOX_VERSION_PATCH=6
