--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- 딥링크로 진입될 스키마와 호스트 정보 수정 -->
                 <data android:host="wisetracker.co.kr"
-                    android:scheme="wisetracker" />
+                    android:scheme="wisetracker2" />
             </intent-filter>
 
             <!--<intent-filter>-->
@@ -89,8 +89,8 @@
         </receiver>
         -->
 
-
-
+        <!-- facebook app id -->
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
     </application>
 
