--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation project(':new_dot')
     //implementation project(':dot')
     implementation project(':dox')
+    implementation project(':inappmessage')
+
     //implementation name: '', ext: 'aar'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
