--- a/onestore_installreferrer/build.gradle
+++ b/onestore_installreferrer/build.gradle
@@ -15,8 +15,8 @@ buildscript {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'android.arch.work:work-runtime:1.0.1'
-    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'androidx.work:work-runtime:2.0.1'
+    implementation 'androidx.annotation:annotation:1.0.0'
     implementation 'com.google.android.gms:play-services-ads-identifier:15.0.0'
     implementation 'commons-net:commons-net:3.6'
     api 'com.android.installreferrer:installreferrer:1.0'
@@ -27,8 +27,8 @@ dependencies {
     api 'io.reactivex.rxjava2:rxjava:2.2.5'
     //api 'com.couchbase.lite:couchbase-lite-android:2.6.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
 task deleteOldJar(type: Delete) {
     delete 'release/wisetracker-onestore.jar'
