--- a/onestore_installreferrer/onestore_installreferrer.test.upload.gradle
+++ b/onestore_installreferrer/onestore_installreferrer.test.upload.gradle
@@ -5,14 +5,14 @@ android {
     compileSdkVersion 28
 
     // account
-    def propsFile = project.rootProject.file('bintray.test.properties')
+    def propsFile = project.rootProject.file('jfrog.test.properties')
     Properties props = new Properties()
     props.load(new FileInputStream(propsFile))
     def user = "${props['BINTRAY_USER'].toString()}"
     def apiKey = "${props['BINTRAY_API_KEY'].toString()}"
 
     // version
-    def versionPropsFile = project.rootProject.file('bintray.test.version.properties')
+    def versionPropsFile = project.rootProject.file('jfrog.test.version.properties')
     Properties versionProps = new Properties()
     versionProps.load(new FileInputStream(versionPropsFile))
 
